changed the getByPacienteDNI to use a query param instead a path param
