# docs/swagger.json
@@ -12,6 +12,36 @@
     },
     "paths": {
         "/turno": {
+            "get": {
+                "description": "Get turnos by Dentista ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "turnos"
+                ],
+                "summary": "Get turnos by Dentista ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID",
+                        "name": "dni",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/turno.Turno"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Add a turno",
                 "consumes": [
@@ -40,38 +70,6 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/turno.Turno"
-                        }
-                    }
-                }
-            }
-        },
-        "/turno/dni/{id}": {
-            "get": {
-                "description": "Get turnos by Dentista ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "turnos"
-                ],
-                "summary": "Get turnos by Dentista ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/turno.Turno"
-                            }
                         }
                     }
                 }
